--- a/index.html
+++ b/index.html
@@ -3,42 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>Francisco Palacios | Web Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Tu Nombre</h1>
-        <p>Desarrollador Web | Frontend | Backend</p>
+        <h1>Francisco Palacios</h1>
+        <p>WordPress Full-Stack Developer | Frontend & Backend | E-commerce & Plugins Personalizados</p>
     </header>
+
     <nav>
         <a href="#sobre-mi">Sobre mí</a>
+        <a href="#habilidades">Habilidades</a>
+        <a href="#experiencia">Experiencia</a>
         <a href="#proyectos">Proyectos</a>
+        <a href="#formacion">Formación</a>
         <a href="#contacto">Contacto</a>
     </nav>
+
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
         <p>
-            Soy un desarrollador web apasionado por crear soluciones creativas y funcionales. Tengo experiencia en HTML, CSS, JavaScript y frameworks modernos.
+            Soy <strong>Desarrollador Web Full-Stack</strong> especializado en WordPress y e-commerce, con más de 3 años de experiencia profesional en desarrollo de sitios, plugins y automatizaciones, y más de 6 años de práctica en el área.
+            Combino un fuerte enfoque en <strong>frontend</strong> —UI/UX, diseño responsive y optimización de performance— con sólidas capacidades de <strong>backend</strong> (PHP, MySQL, programación orientada a objetos).
+        </p>
+        <p>
+            Manejo avanzado de <strong>HTML5, CSS3, JavaScript (ES6+), Elementor, JetEngine y WooCommerce</strong>. 
+            Tengo experiencia en integraciones mediante <strong>REST APIs</strong>, pipelines de despliegue y administración de servidores Linux.
+            Actualmente curso el 4° año de Ingeniería en Sistemas de Información (UTN-FRC) y busco oportunidades donde pueda seguir creciendo y aportando soluciones eficientes e innovadoras.
         </p>
     </section>
+
+    <section id="habilidades">
+        <h2>Habilidades Técnicas</h2>
+        <ul>
+            <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript (ES6+), Elementor, Crocoblock</li>
+            <li><strong>Backend:</strong> PHP, MySQL, SQLite, APIs REST, cronjobs</li>
+            <li><strong>E-commerce:</strong> WooCommerce, pasarelas de pago, automatizaciones</li>
+            <li><strong>DevOps:</strong> Git, WP-CLI, staging, migraciones, CI/CD, Linux</li>
+            <li><strong>Metodologías:</strong> Scrum, UML, PUD, patrones arquitectónicos</li>
+        </ul>
+    </section>
+
+    <section id="experiencia">
+        <h2>Experiencia Laboral</h2>
+
+        <div class="experiencia">
+            <h3>Be More Consultores - Córdoba, Argentina</h3>
+            <p><em>Enero 2024 – Actualidad</em></p>
+            <ul>
+                <li>Desarrollo y mantenimiento de sitios y tiendas online en WordPress con Elementor, JetEngine y WooCommerce.</li>
+                <li>Personalización avanzada de temas y plugins con PHP y JavaScript.</li>
+                <li>Implementación de integraciones externas mediante APIs REST y automatizaciones con cronjobs y WP-CLI.</li>
+                <li>Optimización de performance y seguridad.</li>
+                <li>Gestión de staging, migraciones y soporte técnico integral.</li>
+            </ul>
+        </div>
+
+        <div class="experiencia">
+            <h3>Desarrollador Web Freelance</h3>
+            <p><em>Mayo 2023 – Actualidad</em></p>
+            <ul>
+                <li>Desarrollo de soluciones personalizadas para gestión de stock en PYMEs locales.</li>
+                <li>Integración de sistemas con AFIP y otros servicios externos.</li>
+                <li>Automatización de procesos clave mediante Python y PHP, mejorando la eficiencia operativa.</li>
+            </ul>
+        </div>
+
+        <div class="experiencia">
+            <h3>Atención al Cliente - Autónomo</h3>
+            <p><em>Sep. 2021 – Abril 2023</em></p>
+            <ul>
+                <li>Gestión de consultas de clientes y soporte técnico remoto.</li>
+                <li>Comunicación efectiva y resolución de incidencias.</li>
+            </ul>
+        </div>
+    </section>
+
     <section id="proyectos">
         <h2>Proyectos</h2>
+
         <div class="proyecto">
-            <h3>Proyecto 1</h3>
-            <p>Descripción breve del proyecto 1.</p>
+            <h3><a href="https://hamilton.com.ar" target="_blank">Hamilton</a></h3>
+            <p>Sitio corporativo desarrollado con WordPress, Elementor y funciones personalizadas en PHP/JS. Optimización de UI/UX y velocidad.</p>
         </div>
+
         <div class="proyecto">
-            <h3>Proyecto 2</h3>
-            <p>Descripción breve del proyecto 2.</p>
+            <h3><a href="https://kuperherramientas.com.ar" target="_blank">Kuper Herramientas</a></h3>
+            <p>Tienda WooCommerce con plugins personalizados, automatizaciones y API REST para sincronización de productos.</p>
+        </div>
+
+        <div class="proyecto">
+            <h3><a href="https://amuchasteguiweb.com.ar" target="_blank">Amuchástegui</a></h3>
+            <p>Sitio inmobiliario optimizado para SEO y performance, con filtros personalizados y layouts dinámicos.</p>
+        </div>
+
+        <div class="proyecto">
+            <h3><a href="https://ispfull.com" target="_blank">ISP Full</a></h3>
+            <p>Sitio corporativo con backend personalizado e integración con sistemas de gestión interna.</p>
+        </div>
+
+        <div class="proyecto">
+            <h3><a href="https://setin.ar" target="_blank">Setin</a></h3>
+            <p>Sitio institucional responsive con enfoque en velocidad de carga y accesibilidad.</p>
         </div>
     </section>
+
+    <section id="formacion">
+        <h2>Formación Académica</h2>
+        <ul>
+            <li><strong>Universidad Tecnológica Nacional (UTN-FRC)</strong> – Ingeniería en Sistemas de Información (2019 - Actualidad)</li>
+            <li><strong>Coderhouse</strong> – Desarrollo Web (Jun. 2023 – Sep. 2023)</li>
+            <li><strong>Coderhouse</strong> – Ciberseguridad (Sep. 2023 – Nov. 2023)</li>
+        </ul>
+    </section>
+
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Puedes contactarme en: <a href="mailto:tuemail@ejemplo.com">tuemail@ejemplo.com</a></p>
+        <p><strong>📧 Email:</strong> <a href="mailto:frannp14@gmail.com">frannp14@gmail.com</a></p>
+        <p><strong>📞 Teléfono:</strong> (+54 9) 3582 41-3072</p>
+        <p><strong>🌐 LinkedIn:</strong> <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank">linkedin.com/in/francisco-palacios</a></p>
+        <p><strong>📍 Ubicación:</strong> Córdoba, Argentina</p>
     </section>
+
     <footer>
-        &copy; 2025 Tu Nombre. Todos los derechos reservados.
+        <p>&copy; 2025 Francisco Palacios. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
+
