--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Francisco Palacios | Web Developer</title>
-
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  
   <!-- Bootstrap -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -20,6 +24,8 @@
     <h1>Francisco Palacios</h1>
     <p class="lead">WordPress Full-Stack Developer | Frontend & Backend | E-commerce & Plugins Personalizados</p>
   </header>
+
+  <!-- ... el resto de tu código permanece igual ... -->
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
