--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Francisco Palacios | Web Developer</title>
-  
-  <!-- Favicon -->
+  <title>Francisco Palacios | WordPress Full-Stack Developer</title>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  
+
   <!-- Bootstrap -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="bg-dark text-white text-center py-5">
-    <h1>Francisco Palacios</h1>
-    <p class="lead">WordPress Full-Stack Developer | Frontend & Backend | E-commerce & Plugins Personalizados</p>
+  <!-- HEADER -->
+  <header class="site-header sticky-top">
+    <div class="container d-flex align-items-center justify-content-between">
+      <!-- Nombre / marca -->
+      <div class="brand">
+        <a href="#perfil" class="brand-link">
+          <span class="brand-name">Francisco Palacios</span>
+          <span class="brand-sub">WordPress Full‑Stack Developer</span>
+        </a>
+      </div>
+
+      <!-- Contacto compacto -->
+      <div class="contact-sm text-end">
+        <a href="mailto:frannp14@gmail.com" class="contact-link">frannp14@gmail.com</a>
+        <span class="sep">·</span>
+        <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank" rel="noopener" class="contact-link">LinkedIn</a>
+      </div>
+    </div>
   </header>
 
-  <!-- ... el resto de tu código permanece igual ... -->
-
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+  <nav class="navbar navbar-expand-lg">
     <div class="container justify-content-center">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
-        <li class="nav-item"><a class="nav-link" href="demostraciones.html">Demostraciones</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#perfil">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#resumen-proyectos">Proyectos</a></li>
         <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
       </ul>
     </div>
@@ -41,90 +50,264 @@
 
   <main class="container my-5">
 
-    <!-- SOBRE MÍ -->
-    <section id="sobre-mi" class="mb-5">
-      <h2 class="mb-3">Sobre mí</h2>
+    <!-- PERFIL -->
+    <section id="perfil" class="mb-5">
+      <h2 class="mb-3">Perfil Profesional</h2>
+
+      <!-- TEXTO FINAL INTEGRADO (reemplazar aquí para editar) -->
       <p>
-        Soy <strong>Desarrollador Web Full-Stack</strong> especializado en WordPress y e-commerce, con más de 3 años de experiencia profesional en desarrollo de sitios, plugins y automatizaciones.
+        Desarrollador web full-stack especializado en WordPress y soluciones e-commerce, con más de 3 años de experiencia construyendo sistemas a medida, plugins personalizados e integraciones complejas con APIs externas.
       </p>
       <p>
-        Combino un enfoque fuerte en <strong>frontend</strong> —UI/UX, diseño responsive y optimización de performance— con un dominio sólido en <strong>backend</strong> (PHP, MySQL, APIs REST y programación orientada a objetos).
+        Trabajo de forma integral en los proyectos: análisis de requerimientos, interpretación de diseños (Figma y prototipos), implementación visual y desarrollo completo de la solución, incluyendo pruebas y despliegue en entornos de staging y producción. Tengo un fuerte enfoque tanto en frontend como en backend, asegurando coherencia visual, buena experiencia de usuario y solidez técnica.
       </p>
       <p>
-        Actualmente formo parte de <strong>Be More Consultores</strong>, desarrollando proyectos personalizados, integraciones con APIs y automatizaciones de procesos.
+        En frontend, llevo diseños desde Figma hasta su implementación final en código, cuidando UI/UX, diseño responsive, accesibilidad y optimización de interfaces. En backend, desarrollo lógica de negocio con PHP y MySQL, automatizaciones mediante cronjobs, migraciones y mantenimiento de entornos productivos.
+      </p>
+      <p>
+        Cuento con amplia experiencia en e-commerce: importaciones masivas de productos, sincronización de stock y precios, integraciones entre sistemas de gestión (ERP/RP) y tiendas WooCommerce, y automatización de procesos entre plataformas.
+      </p>
+      <p>
+        Estudiante avanzado de Ingeniería en Sistemas de Información (UTN-FRC), con formación en ingeniería de requerimientos, metodologías ágiles, diseño de software y documentación técnica. Actualmente trabajo en desarrollo web y e-commerce, abierto a nuevos desafíos profesionales.
       </p>
     </section>
 
     <!-- TECNOLOGÍAS -->
     <section id="tecnologias" class="mb-5">
-      <h2 class="mb-3">Tecnologías</h2>
+      <h2 class="mb-3">Tecnologías y Herramientas</h2>
       <div class="row">
+        <!-- Columna izquierda -->
         <div class="col-md-6">
           <ul>
-            <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript (ES6+), Elementor, Crocoblock</li>
-            <li><strong>Backend:</strong> PHP, MySQL, SQLite, APIs REST</li>
+            <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript (ES6+), UI/UX, diseño responsive, implementación desde Figma, optimización de interfaces, Elementor, Crocoblock</li>
+            <li><strong>Backend:</strong> PHP (POO), MySQL, WordPress Core, desarrollo de plugins personalizados, APIs REST, cronjobs, migraciones y automatizaciones</li>
           </ul>
         </div>
+
+        <!-- Columna derecha -->
         <div class="col-md-6">
           <ul>
-            <li><strong>E-commerce:</strong> WooCommerce, integraciones, automatizaciones</li>
-            <li><strong>DevOps:</strong> Git, WP-CLI, staging, CI/CD, Linux</li>
+            <li><strong>E-commerce:</strong> WooCommerce, importaciones masivas de productos, sincronización de stock y precios, integraciones ERP/RP ↔ e-commerce, automatización de procesos</li>
+            <li><strong>DevOps / Herramientas:</strong> Git, WP-CLI, entornos de staging y producción, migraciones, Linux</li>
+            <li><strong>Metodologías:</strong> Scrum, ingeniería de requerimientos, UML, documentación técnica</li>
           </ul>
         </div>
       </div>
+    </section>
+
+    <!-- COMPETENCIAS -->
+    <section id="competencias" class="mb-5">
+      <h2 class="mb-3">Competencias</h2>
+      <ul>
+        <li>Implementación de interfaces desde diseño (Figma → código)</li>
+        <li>Desarrollo frontend enfocado en UI/UX, responsive y accesibilidad</li>
+        <li>Desarrollo backend en PHP orientado a lógica de negocio y escalabilidad</li>
+        <li>Desarrollo y mantenimiento de plugins personalizados en WordPress</li>
+        <li>Automatización de procesos mediante cronjobs y tareas programadas</li>
+        <li>Integraciones con APIs externas y sincronización entre sistemas</li>
+        <li>Gestión avanzada de e-commerce (importaciones masivas, stock, precios)</li>
+        <li>Integración entre sistemas de gestión (ERP/RP) y WooCommerce</li>
+        <li>Optimización de performance, seguridad y entornos productivos</li>
+      </ul>
     </section>
 
     <!-- EXPERIENCIA -->
     <section id="experiencia" class="mb-5">
       <h2 class="mb-3">Experiencia Laboral</h2>
+
       <div class="card mb-3">
         <div class="card-body">
-          <h3>Be More Consultores - Córdoba, Argentina</h3>
-          <p><em>Enero 2024 – Actualidad</em></p>
+          <h5>Be More Consultores – Córdoba</h5>
+          <p class="mb-1"><em>Desarrollador Web WordPress · Ene. 2024 – Actualidad</em></p>
           <ul>
-            <li>Desarrollo y mantenimiento de sitios y tiendas online en WordPress.</li>
-            <li>Integraciones mediante APIs REST y automatizaciones con cronjobs.</li>
-            <li>Optimización de performance y staging.</li>
+            <li>Implementación de diseños desde Figma y maquetación responsive en WordPress.</li>
+            <li>Desarrollo y mantenimiento de sitios web y tiendas WooCommerce.</li>
+            <li>Desarrollo de lógica backend en PHP y JavaScript.</li>
+            <li>Desarrollo de plugins personalizados y automatizaciones con cronjobs.</li>
+            <li>Integraciones con APIs externas y sincronización de datos.</li>
+            <li>Importaciones masivas de productos y mantenimiento de catálogos e-commerce.</li>
+            <li>Optimización de performance, seguridad y migraciones entre entornos.</li>
           </ul>
         </div>
       </div>
 
       <div class="card mb-3">
         <div class="card-body">
-          <h3>Desarrollador Freelance</h3>
-          <p><em>Mayo 2023 – Actualidad</em></p>
+          <h5>Autónomo / Freelance</h5>
+          <p class="mb-1"><em>Desarrollador Web · May. 2023 – Actualidad</em></p>
           <ul>
-            <li>Soluciones personalizadas para PYMEs locales.</li>
-            <li>Integración de sistemas de gestión con AFIP y servicios externos.</li>
+            <li>Implementación de interfaces desde diseño hasta producción final.</li>
+            <li>Desarrollo de soluciones web a medida para PYMEs y emprendimientos.</li>
+            <li>Integraciones entre sistemas de gestión (ERP/RP) y plataformas e-commerce.</li>
+            <li>Automatización de procesos, importaciones masivas y sincronización de datos.</li>
+            <li>Soporte técnico, mantenimiento y mejoras evolutivas en producción.</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <!-- PROYECTOS -->
+    <!-- PROYECTOS DESTACADOS -->
     <section id="resumen-proyectos" class="mb-5">
       <h2 class="mb-3">Proyectos Destacados</h2>
+
+      <div class="row g-4">
+        <!-- HAMILTON -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://hamilton.com.ar" target="_blank" rel="noopener">Hamilton</a>
+              </h5>
+              <p class="card-text">
+                Proyecto corporativo desarrollado en equipo. Participé en la migración completa del sitio de Elementor a Divi, trabajando tanto en frontend como backend. Implementación del diseño desde Figma, maquetación responsive completa (header, footer, formularios y secciones) y ajustes visuales avanzados.
+              </p>
+              <p class="card-text">
+                Desarrollo backend de un módulo “Dónde comprar” mediante Custom Post Types, integración con la API de Google Maps e importación masiva de locales utilizando WP All Import. WooCommerce utilizado como catálogo de productos (sin venta directa), orientado a presentación comercial y consultas.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- KUPER HERRAMIENTAS -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://kuperherramientas.com.ar" target="_blank" rel="noopener">Kuper Herramientas</a>
+              </h5>
+              <p class="card-text">
+                Sitio desarrollado desde cero en equipo. Implementación completa del frontend a partir de diseño (Figma → WordPress), incluyendo estructura general, maquetación responsive y configuración del sitio.
+              </p>
+              <p class="card-text">
+                WooCommerce utilizado como catálogo de productos (sin venta directa), enfocado en presentación comercial y resolución de consultas. Trabajo conjunto en optimización, mantenimiento y evolución del proyecto.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- AMUCHÁSTEGUI -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://amuchasteguiweb.com.ar" target="_blank" rel="noopener">Amuchástegui</a>
+              </h5>
+              <p class="card-text">
+                Proyecto desarrollado de forma integral. Implementación completa del sitio a partir del diseño, maquetación responsive y puesta en producción.
+              </p>
+              <p class="card-text">
+                Desarrollo de tienda WooCommerce con importación de productos, configuración de pasarelas de pago, usuarios, roles y permisos. Gestión completa del sistema, incluyendo hosting, estructura de la tienda y operación en entorno productivo.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- ISPFULL -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://ispfull.com/" target="_blank" rel="noopener">ISPFull</a>
+              </h5>
+              <p class="card-text">
+                Plataforma de servicios desarrollada en equipo, con participación activa en frontend y backend. Implementación de interfaces, traducciones multilenguaje, integraciones vía APIs externas y automatizaciones mediante cronjobs.
+              </p>
+              <p class="card-text">
+                Optimización de performance, mantenimiento evolutivo y soporte en entorno productivo.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- ANDES INFINITO -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://andesinfinito.com/inicio/" target="_blank" rel="noopener">Andes Infinito</a>
+              </h5>
+              <p class="card-text">
+                Sitio turístico de presentación desarrollado en equipo. Implementación de diseño personalizado, maquetación responsive y estructura orientada a experiencia de usuario.
+              </p>
+              <p class="card-text">
+                Participación en desarrollo frontend, traducciones multilenguaje, automatizaciones backend y optimización general del sitio. Proyecto enfocado exclusivamente en presentación de servicios, sin venta online.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- DANIELA NOCETTI -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://danielanocetti.com/" target="_blank" rel="noopener">Daniela Nocetti</a>
+              </h5>
+              <p class="card-text">
+                Plataforma de cursos online desarrollada en equipo, integrando LearnDash con WooCommerce.
+              </p>
+              <p class="card-text">
+                Implementación de flujos de venta, gestión de accesos a cursos, upsells y automatizaciones para la entrega de contenido digital y productos educativos.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- CLARISA MINO -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 project-card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://clarisamino.com/" target="_blank" rel="noopener">Clarisa Mino</a>
+              </h5>
+              <p class="card-text">
+                Tienda y plataforma LMS integradas. Implementación de LearnDash y WooCommerce, configuración de pasarelas de pago, suscripciones y automatizaciones.
+              </p>
+              <p class="card-text">
+                Trabajo en estructura del sistema y experiencia de usuario para una plataforma de aprendizaje escalable.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- FORMACIÓN -->
+    <section id="formacion" class="mb-5">
+      <h2 class="mb-3">Formación Académica</h2>
+      <p>
+        <strong>Ingeniería en Sistemas de Información</strong><br>
+        Universidad Tecnológica Nacional (UTN-FRC) · 4° año en curso
+      </p>
+
+      <h4 class="mt-3">Cursos</h4>
       <ul>
-        <li><a href="https://hamilton.com.ar" target="_blank">Hamilton</a> — Sitio corporativo WordPress + Elementor + PHP/JS.</li>
-        <li><a href="https://kuperherramientas.com.ar" target="_blank">Kuper Herramientas</a> — WooCommerce con plugins personalizados.</li>
-        <li><a href="https://amuchasteguiweb.com.ar" target="_blank">Amuchástegui</a> — Sitio inmobiliario optimizado para SEO.</li>
+        <li>Ciberseguridad – Coderhouse</li>
+        <li>Desarrollo Web – Coderhouse</li>
       </ul>
-      <a href="proyectos.html" class="btn btn-primary mt-3">Ver todos los proyectos</a>
+    </section>
+
+    <!-- IDIOMAS -->
+    <section id="idiomas" class="mb-5">
+      <h2 class="mb-3">Idiomas</h2>
+      <p>Inglés: Intermedio-Avanzado</p>
     </section>
 
     <!-- CONTACTO -->
-    <section id="contacto">
+    <section id="contacto" class="mb-5">
       <h2 class="mb-3">Contacto</h2>
-      <p><strong>Email:</strong> <a href="mailto:frannp14@gmail.com">frannp14@gmail.com</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank">linkedin.com/in/francisco-palacios</a></p>
-      <p><strong>Teléfono:</strong> (+54 9) 3582 41-3072</p>
-      <p><strong>Ubicación:</strong> Córdoba, Argentina</p>
+      <p>Email: <a href="mailto:frannp14@gmail.com">frannp14@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank">francisco-palacios</a></p>
+      <p>Ubicación: Córdoba, Argentina</p>
     </section>
+
+
 
   </main>
 
-  <footer class="bg-dark text-center text-white py-3">
-    <p>&copy; 2025 Francisco Palacios</p>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2026 Francisco Palacios</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
