Update portfolio content, projects and professional profile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <div class="contact-sm text-end">
         <a href="mailto:frannp14@gmail.com" class="contact-link">frannp14@gmail.com</a>
         <span class="sep">·</span>
-        <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank" rel="noopener" class="contact-link">LinkedIn</a>
+        <a href="tel:+543582413072" class="contact-link">3582 413072</a>
+        <span class="sep">·</span>
+        <a href="https://www.linkedin.com/in/francisco-palacios-b8077222b/" target="_blank" rel="noopener" class="contact-link">LinkedIn</a>
       </div>
     </div>
   </header>
@@ -297,9 +299,10 @@
     <!-- CONTACTO -->
     <section id="contacto" class="mb-5">
       <h2 class="mb-3">Contacto</h2>
-      <p>Email: <a href="mailto:frannp14@gmail.com">frannp14@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/francisco-palacios" target="_blank">francisco-palacios</a></p>
-      <p>Ubicación: Córdoba, Argentina</p>
+      <p><strong>Email:</strong> <a href="mailto:frannp14@gmail.com">frannp14@gmail.com</a></p>
+      <p><strong>Teléfono:</strong> <a href="tel:+543582413072">3582 413072</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/francisco-palacios-b8077222b/" target="_blank" rel="noopener">francisco-palacios-b8077222b</a></p>
+      <p><strong>Ubicación:</strong> Córdoba, Argentina</p>
     </section>
 
 
