Update portfolio content, projects and professional profile

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <li>Desarrollo y mantenimiento de plugins personalizados en WordPress</li>
         <li>Automatización de procesos mediante cronjobs y tareas programadas</li>
         <li>Integraciones con APIs externas y sincronización entre sistemas</li>
-        <li>Gestión avanzada de e-commerce (importaciones masivas, stock, precios)</li>
+        <li>Gestión avanzada de e-commerce (importaciones masivas, stock, precios y variaciones)</li>
         <li>Integración entre sistemas de gestión (ERP/RP) y WooCommerce</li>
         <li>Optimización de performance, seguridad y entornos productivos</li>
       </ul>
