--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="perfil" class="mb-5">
       <h2 class="mb-3">Perfil Profesional</h2>
 
-      <!-- TEXTO FINAL INTEGRADO (reemplazar aquí para editar) -->
+    
       <p>
         Desarrollador web full-stack especializado en WordPress y soluciones e-commerce, con más de 3 años de experiencia construyendo sistemas a medida, plugins personalizados e integraciones complejas con APIs externas.
       </p>
@@ -313,6 +313,7 @@
     <p class="mb-0">&copy; 2026 Francisco Palacios</p>
   </footer>
 
+  <!-- Bootstrap JS (necesario para el toggler y componentes) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
